# aiida-crystal17

./: .condarc  .coveragerc  .flake8  .gitchangelog.rc  .gitignore  .pre-commit-config.yaml  .prospector.yaml  .readthedocs.yml  .style.yapf  .travis.yml  LICENSE  MANIFEST.in  README.md  aiida_environment.yaml  calc_basic.md  conda_dev_env.yml  conda_env_aiida_workshop.yml  conda_env_py36_aiida1a4.yaml  conda_env_py36_aiida1b1.yaml  conftest.py  environment.yml  manage.py  pyproject.toml  pytest.ini  setup.json  setup.py  tox.ini
.github/workflows/: tests.yml
.pre-commit/: check_version.py
.travis-data/: check_version.py
aiida_crystal17/: __init__.py  aiida_compatability.py  common.py  graph.py  parsers.py  utils.py
aiida_crystal17/calcfunctions/: band_gap.py
aiida_crystal17/calculations/: cry_abstract.py  cry_basic.py  cry_doss.py  cry_ech3.py  cry_fermi.py  cry_main.py  cry_main_immigrant.py  diffcalc.py  prop_abstract.py  prop_doss.py  prop_ech3.py  prop_newk.py  prop_ppan.py
aiida_crystal17/cmndline/: basis_set.py  cmd_parser.py  options.py  structsettings.py  symmetry.py  test_cmnds.py
aiida_crystal17/common/: __init__.py  aiida.py  atoms.py  cry_fname_map.yaml  d3_parameters.json  dict_funcs.py  kpoints.py  mapping.py  parsing.py  units.yaml
aiida_crystal17/cry17_scripts/: cry17.bashrc  cry17.cshrc  runmpi17  runmpi17MPP  runmpi_prop17
aiida_crystal17/data/: __init__.py  basis_set.py  data_cli.py  gcube.py  (+5 more)
aiida_plugin_template/: __init__.py
cry17_scripts/: runcry17  runprop17
docs/: .gitignore  Makefile  environment.yaml  requirements_for_rtd.txt
examples/: cli.py  immigrant.py  submit.py  submit_basic.py  submit_immigrant.py  submit_main.py  submit_pwimmigrant.py  test_immigrant.py  test_submit_basic.py  test_submit_main.py
(+631 files in other folders)
